<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_details"
        android:title="@string/detail_activity_title"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_wiki"
        android:title="@string/wiki_label"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_whatisthis"
        android:title="@string/what_label"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_selectagraticule"
        android:title="@string/graticule_label"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_date"
        android:title="@string/date_label"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_try_tomorrow"
        android:title="@string/menu_item_tomorrow"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_map_type"
        android:title="@string/menu_item_map_type"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_send_to_maps"
        android:title="@string/menu_item_send_to_maps"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_send_to_radar"
        android:title="@string/menu_item_radar"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_preferences"
        android:title="@string/title_preferences"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/title_about"
        android:titleCondensed="@string/menu_item_about"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_versionhistory"
        android:title="@string/title_versionhistory"
        android:showAsAction="never" />
</menu>
