<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_exitgraticule"
        android:title="@string/exit_graticule_label"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_date"
        android:title="@string/date_label"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_whatisthis"
        android:title="@string/what_label"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_map_type"
        android:title="@string/menu_item_map_type"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_preferences"
        android:title="@string/title_preferences"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/title_about"
        android:titleCondensed="@string/menu_item_about"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_versionhistory"
        android:title="@string/title_versionhistory"
        android:showAsAction="never" />
</menu>
