<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/standard_padding">

    <LinearLayout
        android:id="@+id/latlonrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/grat_lat"
            android:layout_width="@dimen/input_graticule_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/input_graticule_margin"
            android:digits="0123456789-"
            android:hint="@string/hint_lat"
            android:imeOptions="flagNoExtractUi|actionNext"
            android:inputType="numberSigned"
            android:maxLength="4"
            android:saveEnabled="true"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/input_graticule_fontsize"/>

        <EditText
            android:id="@+id/grat_lon"
            android:layout_width="@dimen/input_graticule_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/input_graticule_margin"
            android:digits="0123456789-"
            android:hint="@string/hint_lon"
            android:imeOptions="flagNoExtractUi|actionDone"
            android:inputType="numberSigned"
            android:maxLength="4"
            android:saveEnabled="true"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/input_graticule_fontsize"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latlonrow"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/grat_closest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/refresh"
            android:drawablePadding="@dimen/input_graticule_closest_icon_margin"
            android:drawableStart="@drawable/refresh"
            android:text="@string/closest_label"/>

        <CheckBox
            android:id="@+id/grat_globalhash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/globalhash_label"/>
    </LinearLayout>


    <ImageButton
        android:id="@+id/close"
        style="@style/GeohashDroid.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonrow"
        android:layout_alignTop="@+id/latlonrow"
        android:contentDescription="@string/close_label"
        android:src="@drawable/cancel_button"/>
</merge>