<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:keepScreenOn="true"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:padding="@dimen/details_text_padding"
            android:textSize="@dimen/details_title_fontsize"/>

        <LinearLayout
            android:id="@+id/FinishBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/DestLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableLeft="@drawable/final_destination"
                android:gravity="center"
                android:padding="@dimen/details_text_padding"
                android:text="@string/details_finish"
                android:textSize="@dimen/details_subtitle_fontsize"/>

            <TextView
                android:id="@+id/dest_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/standby_title"
                android:textSize="@dimen/details_coords_fontsize"/>

            <TextView
                android:id="@+id/dest_lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/standby_title"
                android:textSize="@dimen/details_coords_fontsize"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/you_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/YouLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableLeft="@drawable/current_location"
                android:gravity="center"
                android:padding="@dimen/details_text_padding"
                android:text="@string/details_you"
                android:textSize="@dimen/details_subtitle_fontsize"/>

            <TextView
                android:id="@+id/you_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/standby_title"
                android:textSize="@dimen/details_coords_fontsize"/>

            <TextView
                android:id="@+id/you_lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/standby_title"
                android:textSize="@dimen/details_coords_fontsize"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/distance_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DistanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/details_text_padding"
                android:paddingRight="@dimen/details_distance_padding"
                android:paddingTop="@dimen/details_text_padding"
                android:text="@string/details_dist"
                android:textSize="@dimen/details_distance_fontsize"/>

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/details_text_padding"
                android:paddingTop="@dimen/details_text_padding"
                android:text="@string/standby_title"
                android:textSize="@dimen/details_distance_fontsize"/>

        </LinearLayout>

        <TextView
            android:id="@+id/accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/details_accuracy_fontsize_small"/>

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/backtomap_label"/>
    </LinearLayout>
</ScrollView>